rapor/cbu_gramer.bnf.txt
<program> ::= <komut_listesi>

<komut_listesi> ::= <komut> | <komut> <komut_listesi>

<komut> ::= <degisken_tanimla>
          | <atama>
          | <eger_cumlesi>
          | <iken_dongusu>
          | <yazdirma>

<degisken_tanimla> ::= "değişken" <isim> "=" <ifade> ";"

<atama> ::= <isim> "=" <ifade> ";"

<eger_cumlesi> ::= "eğer" "(" <kosul> ")" "ise" "{" <komut_listesi> "}"

<iken_dongusu> ::= "iken" "(" <kosul> ")" "{" <komut_listesi> "}"

<yazdirma> ::= "yaz" "(" <ifade> ")" ";"

<kosul> ::= <ifade> <karsilastirma> <ifade>

<karsilastirma> ::= "==" | "!=" | "<" | "<=" | ">" | ">="

<ifade> ::= <sayi> 
          | <isim>
          | <ifade> <aritmetik> <ifade>

<aritmetik> ::= "+" | "-" | "*" | "/"

<isim> ::= <harf> { <harf> | <rakam> }

<harf> ::= "a" | "b" | ... | "z" 
         | "ğ" | "ü" | "ö" | "ç" | "ş" | "ı" | "İ" 
         | "A" | "B" | ... | "Z" 
         | "Ğ" | "Ü" | "Ö" | "Ç" | "Ş" | "İ" | "I"

<rakam> ::= "0" | "1" | "2" | "3" | "4" | "5" | "6" | "7" | "8" | "9"

<sayi> ::= <rakam> { <rakam> }

<fonksiyon_tanim> ::= "fonksiyon" <isim> "(" [<param_listesi>] ")" "{" <komut_listesi> "}"
<param_listesi> ::= <isim> | <isim> "," <param_listesi>
<fonksiyon_cagri> ::= <isim> "(" [<arguman_listesi>] ")"
<arguman_listesi> ::= <ifade> | <ifade> "," <arguman_listesi>
